src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__region_labeled.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Region {
                                    name: Some(
                                        Spanned {
                                            node: SymbolU32 {
                                                value: 2,
                                            },
                                            span: Span {
                                                start: 16,
                                                end: 21,
                                                start_line: 1,
                                                start_col: 17,
                                            },
                                        },
                                    ),
                                    body: Block {
                                        statements: [],
                                        expr: Some(
                                            Expr {
                                                kind: Call {
                                                    callee: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 3,
                                                                            },
                                                                            span: Span {
                                                                                start: 24,
                                                                                end: 29,
                                                                                start_line: 1,
                                                                                start_col: 25,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 24,
                                                                    end: 29,
                                                                    start_line: 1,
                                                                    start_col: 25,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 24,
                                                            end: 29,
                                                            start_line: 1,
                                                            start_col: 25,
                                                        },
                                                    },
                                                    args: [
                                                        CallArg {
                                                            name: None,
                                                            value: Expr {
                                                                kind: Literal(
                                                                    Literal {
                                                                        kind: Int {
                                                                            value: 100,
                                                                            suffix: None,
                                                                        },
                                                                        span: Span {
                                                                            start: 30,
                                                                            end: 33,
                                                                            start_line: 1,
                                                                            start_col: 31,
                                                                        },
                                                                    },
                                                                ),
                                                                span: Span {
                                                                    start: 30,
                                                                    end: 33,
                                                                    start_line: 1,
                                                                    start_col: 31,
                                                                },
                                                            },
                                                            span: Span {
                                                                start: 30,
                                                                end: 33,
                                                                start_line: 1,
                                                                start_col: 31,
                                                            },
                                                        },
                                                    ],
                                                },
                                                span: Span {
                                                    start: 24,
                                                    end: 34,
                                                    start_line: 1,
                                                    start_col: 25,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 22,
                                            end: 36,
                                            start_line: 1,
                                            start_col: 23,
                                        },
                                    },
                                },
                                span: Span {
                                    start: 9,
                                    end: 36,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 38,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 38,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 38,
        start_line: 1,
        start_col: 1,
    },
}
