src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__resume_expr.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Handler(
            HandlerDecl {
                attrs: [],
                kind: Deep,
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 14,
                        end: 15,
                        start_line: 2,
                        start_col: 14,
                    },
                },
                type_params: None,
                effect: Type {
                    kind: Path(
                        TypePath {
                            segments: [
                                TypePathSegment {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 2,
                                        },
                                        span: Span {
                                            start: 20,
                                            end: 25,
                                            start_line: 2,
                                            start_col: 20,
                                        },
                                    },
                                    args: Some(
                                        TypeArgs {
                                            args: [
                                                Type(
                                                    Type {
                                                        kind: Path(
                                                            TypePath {
                                                                segments: [
                                                                    TypePathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 3,
                                                                            },
                                                                            span: Span {
                                                                                start: 26,
                                                                                end: 29,
                                                                                start_line: 2,
                                                                                start_col: 26,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 26,
                                                                    end: 29,
                                                                    start_line: 2,
                                                                    start_col: 26,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 26,
                                                            end: 29,
                                                            start_line: 2,
                                                            start_col: 26,
                                                        },
                                                    },
                                                ),
                                            ],
                                            span: Span {
                                                start: 25,
                                                end: 30,
                                                start_line: 2,
                                                start_col: 25,
                                            },
                                        },
                                    ),
                                },
                            ],
                            span: Span {
                                start: 20,
                                end: 30,
                                start_line: 2,
                                start_col: 20,
                            },
                        },
                    ),
                    span: Span {
                        start: 20,
                        end: 30,
                        start_line: 2,
                        start_col: 20,
                    },
                },
                where_clause: None,
                state: [],
                return_clause: Some(
                    ReturnClause {
                        param: Spanned {
                            node: SymbolU32 {
                                value: 4,
                            },
                            span: Span {
                                start: 44,
                                end: 45,
                                start_line: 3,
                                start_col: 12,
                            },
                        },
                        body: Block {
                            statements: [],
                            expr: Some(
                                Expr {
                                    kind: Path(
                                        ExprPath {
                                            segments: [
                                                ExprPathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 4,
                                                        },
                                                        span: Span {
                                                            start: 49,
                                                            end: 50,
                                                            start_line: 3,
                                                            start_col: 17,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 49,
                                                end: 50,
                                                start_line: 3,
                                                start_col: 17,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 49,
                                        end: 50,
                                        start_line: 3,
                                        start_col: 17,
                                    },
                                },
                            ),
                            span: Span {
                                start: 47,
                                end: 52,
                                start_line: 3,
                                start_col: 15,
                            },
                        },
                        span: Span {
                            start: 37,
                            end: 52,
                            start_line: 3,
                            start_col: 5,
                        },
                    },
                ),
                finally_clause: None,
                operations: [
                    OperationImpl {
                        name: Spanned {
                            node: SymbolU32 {
                                value: 5,
                            },
                            span: Span {
                                start: 60,
                                end: 63,
                                start_line: 4,
                                start_col: 8,
                            },
                        },
                        params: [],
                        body: Block {
                            statements: [],
                            expr: Some(
                                Expr {
                                    kind: Resume(
                                        Expr {
                                            kind: Literal(
                                                Literal {
                                                    kind: Int {
                                                        value: 42,
                                                        suffix: None,
                                                    },
                                                    span: Span {
                                                        start: 75,
                                                        end: 77,
                                                        start_line: 4,
                                                        start_col: 23,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 75,
                                                end: 77,
                                                start_line: 4,
                                                start_col: 23,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 68,
                                        end: 78,
                                        start_line: 4,
                                        start_col: 16,
                                    },
                                },
                            ),
                            span: Span {
                                start: 66,
                                end: 80,
                                start_line: 4,
                                start_col: 14,
                            },
                        },
                        span: Span {
                            start: 57,
                            end: 80,
                            start_line: 4,
                            start_col: 5,
                        },
                    },
                ],
                span: Span {
                    start: 1,
                    end: 82,
                    start_line: 2,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 1,
        end: 82,
        start_line: 2,
        start_col: 1,
    },
}
