src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__self_by_value.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Impl(
            ImplBlock {
                attrs: [],
                type_params: None,
                trait_ty: None,
                self_ty: Type {
                    kind: Path(
                        TypePath {
                            segments: [
                                TypePathSegment {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 1,
                                        },
                                        span: Span {
                                            start: 5,
                                            end: 10,
                                            start_line: 1,
                                            start_col: 6,
                                        },
                                    },
                                    args: None,
                                },
                            ],
                            span: Span {
                                start: 5,
                                end: 10,
                                start_line: 1,
                                start_col: 6,
                            },
                        },
                    ),
                    span: Span {
                        start: 5,
                        end: 10,
                        start_line: 1,
                        start_col: 6,
                    },
                },
                where_clause: None,
                items: [
                    Function(
                        FnDecl {
                            attrs: [],
                            vis: Private,
                            qualifiers: FnQualifiers {
                                is_const: false,
                                is_async: false,
                                is_unsafe: false,
                            },
                            name: Spanned {
                                node: SymbolU32 {
                                    value: 2,
                                },
                                span: Span {
                                    start: 16,
                                    end: 23,
                                    start_line: 1,
                                    start_col: 17,
                                },
                            },
                            type_params: None,
                            params: [
                                Param {
                                    qualifier: None,
                                    pattern: Pattern {
                                        kind: Ident {
                                            by_ref: false,
                                            mutable: false,
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 4,
                                                },
                                                span: Span {
                                                    start: 24,
                                                    end: 28,
                                                    start_line: 1,
                                                    start_col: 25,
                                                },
                                            },
                                            subpattern: None,
                                        },
                                        span: Span {
                                            start: 24,
                                            end: 28,
                                            start_line: 1,
                                            start_col: 25,
                                        },
                                    },
                                    ty: Type {
                                        kind: Path(
                                            TypePath {
                                                segments: [
                                                    TypePathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 3,
                                                            },
                                                            span: Span {
                                                                start: 24,
                                                                end: 28,
                                                                start_line: 1,
                                                                start_col: 25,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 24,
                                                    end: 28,
                                                    start_line: 1,
                                                    start_col: 25,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 24,
                                            end: 28,
                                            start_line: 1,
                                            start_col: 25,
                                        },
                                    },
                                    span: Span {
                                        start: 24,
                                        end: 28,
                                        start_line: 1,
                                        start_col: 25,
                                    },
                                },
                            ],
                            return_type: None,
                            effects: None,
                            where_clause: None,
                            body: Some(
                                Block {
                                    statements: [],
                                    expr: None,
                                    span: Span {
                                        start: 30,
                                        end: 32,
                                        start_line: 1,
                                        start_col: 31,
                                    },
                                },
                            ),
                            span: Span {
                                start: 13,
                                end: 32,
                                start_line: 1,
                                start_col: 14,
                            },
                        },
                    ),
                ],
                span: Span {
                    start: 0,
                    end: 34,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 34,
        start_line: 1,
        start_col: 1,
    },
}
